Fix spell payload errors